--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@ main{
     height: calc(100vh - var(--footer-height));
     padding: 60px 0 20px;
     position: relative;
+    overflow-y: scroll;
+
 }
 
 main > ul{
@@ -66,10 +68,6 @@ main > ul > li{
 
     display: flex;
     flex-wrap: wrap;
-
-    /* debug */
-    border: 1px dashed white;
-    height: 100%;
 }
 
 .user{
@@ -83,7 +81,7 @@ main > ul > li{
     bottom: 0;
     left: 0;
     padding: 5px;
-    background-color:rgba(128, 128, 128, 0.5);
+    background-color:rgba(128, 128, 128, 0.8);
 }
 
 /* FOOTER */
@@ -96,7 +94,7 @@ footer{
 }
 
 .video-settings, .end-meeting{
-    width: 10%;
+    width: 15%;
     height: var(--footer-height);
 }
 
