--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,31 @@ body{
     justify-content: center;
 }
 
+/* HEADER */
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    height: 40px;
+    background-color: black;
+}
+
+header > ul{
+    position: absolute;
+    top: 0;
+    right: 1%;
+    padding: 5px;
+    gap: 10px;
+}
+
+header > ul > li{
+    padding: 5px;
+    background-color: rgba(128, 128, 128, 0.5);
+    border-radius: 5px;
+}
+
 /* MAIN */
 main{
     height: calc(100vh - var(--footer-height));
@@ -47,18 +72,8 @@ main{
 
 }
 
-main > ul{
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 5px;
-    gap: 10px;
-}
-
-main > ul > li{
-    padding: 5px;
-    background-color: rgba(128, 128, 128, 0.5);
-    border-radius: 5px;
+img{
+    display: block;
 }
 
 .container{
